# deiimos

./: .clang-format  .gitignore  .gitmodules  README.md
data/configs/: simple_mesh.xml  test1.xml  test_1_1.xml
src/: CMakeLists  CMakeLists.txt  XMLHandler.cpp  XMLHandler.h  main.cpp  merge.h  mesh.h  msgstream.h
src/io/console/: msgstream.cpp  msgstream.h
src/io/xml/: XMLHandler.cpp  XMLHandler.h  XmlHandler.h  XmlNode.cpp  XmlNode.h  xmlexceptions.cpp  xmlexceptions.h
src/mesh/: ManifoldFactory.cpp  ManifoldFactory.h  ManifoldReader.h  MeshReader.h  TopologyInfo.h  TopologySet.h
